# play_buildSystem

./: .gitignore  README.md
gn/: .gclient  .gitignore  README.md  build.vpj  gn.vpw
gn/dist_src/: .gitignore  BUILD.gn  version.txt
gn/doc/: GN Frequently Asked Questions.html  GN Language and Operation.html  GN Quick Start guide.html  GN Reference.html  GN Style Guide.html  GN check.html  GNStandalone.html  (+8 more)
gn/simplified_gn/: .gn  BUILD.gn  BUILD.gni  gn_build.bat  gn_build_android.sh  gn_build_java.sh  run.sh  run_java.sh
gn/simplified_gn/demo_android/: BUILD.gn  demo_android.vpj
gn/simplified_gn/demo_android/jni/: Android.mk  com_erikge_gnandroid_NativeInterface.cpp  com_erikge_gnandroid_NativeInterface.h  jni_util.cpp
gn/simplified_gn/demo_android/src/com/erikge/gnandroid/: MainActivity.java  NativeInterface.java
gn/simplified_gn/demo_cmd/: BUILD.gn
gn/simplified_gn/demo_ios/gnIos/gnIos/: AppDelegate.m  DetailViewController.h  main.m
gn/simplified_gn/demo_ios/gnIos/gnIos.xcodeproj/: project.pbxproj
gn/simplified_gn/demo_ios/gnIos/gnIos.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
gn/simplified_gn/demo_java/: BUILD.gn
gn/simplified_gn/gn/addon/: compiled_action.gni  zip.gni
gn/simplified_gn/gn/addon/android_app/: BUILD.gn  add_asset_ap.py  aidl.py  apkbuilder.py  create_dist_jar.py  create_java_binary_script.py  dex.py  finalize_apk.py  generate_v14_compatible_resources.py  internal_rules.gni  jar.py  javac.py  pack_relocations.py  package_resources.py  process_resources.py  proguard.py  rules.gni  rules_internal.gni  write_build_config.py  write_ordered_libraries.py
gn/simplified_gn/gn/addon/android_app/_addon_/ijar/: BUILD.gn  ijar.cc  ijar.gni
gn/simplified_gn/gn/addon/android_app/helper/: debug.jks
gn/simplified_gn/gn/addon/android_app/ijar/: ijar.gni
gn/simplified_gn/gn/addon/android_app/incremental_install/: BUILD.gn  create_install_script.py  generate_android_manifest.py  installer.py
gn/simplified_gn/gn/addon/android_code_analysis/: rules.gni
gn/simplified_gn/gn/addon/ios_app/: rules.gni
gn/simplified_gn/gn/addon/mac_app/: rules.gni
gn/simplified_gn/gn/addon/win_app/: manifest.gni
gn/simplified_gn/gn/core/: BUILDCONFIG.gn  switch.gni
gn/simplified_gn/gn/core/config/: BUILD.gn  sysroot.gni  target_default.gni
gn/simplified_gn/gn/core/config/android/: BUILD.gn  debug.keystore  env.gni
gn/simplified_gn/gn/core/config/compiler/: BUILD.gn
gn/simplified_gn/gn/core/config/compiler/binutils/: BUILD.gn
gn/simplified_gn/gn/core/config/compiler/clang/: BUILD.gn
gn/simplified_gn/gn/core/config/compiler/optimization/: BUILD.gn
gn/simplified_gn/gn/core/config/compiler/rtti/: BUILD.gn
gn/simplified_gn/gn/core/config/compiler/runtime_library/: BUILD.gn
gn/simplified_gn/gn/core/config/compiler/symbols/: BUILD.gn  config.gni
gn/simplified_gn/gn/core/config/compiler/warning/: BUILD.gn
gn/simplified_gn/gn/core/config/gcc/: BUILD.gn  env.gni
gn/simplified_gn/gn/core/config/ios/: BUILD.gn  env.gni
gn/simplified_gn/gn/core/config/linux/: BUILD.gn  pkg_config.gni
gn/simplified_gn/gn/core/config/linux/gtk2/: BUILD.gn
gn/simplified_gn/gn/core/config/linux/gtk3/: BUILD.gn
gn/simplified_gn/gn/core/config/mac/: BUILD.gn  env.gni
gn/simplified_gn/gn/core/config/win/: BUILD.gn  env.gni
gn/simplified_gn/gn/core/toolchain/: gcc_toolchain.gni  gcc_toolchain_setup_on_win.py
gn/simplified_gn/gn/core/toolchain/android/: BUILD.gn
gn/simplified_gn/gn/core/toolchain/cros/: BUILD.gn
gn/simplified_gn/gn/core/toolchain/linux/: BUILD.gn
gn/simplified_gn/gn/core/toolchain/win/: BUILD.gn  gyp_win_tool.py  midl.gni  setup_toolchain.py
gn/simplified_gn/gn/core/user/: switch.gni  target_default.gni
gn/simplified_gn/gn/feature/default_libs/: BUILD.gn
gn/simplified_gn/gn/feature/precompile/: BUILD.gn
gn/simplified_gn/gn/script/: file_exists.py  gn_run_cmd.py
gn/simplified_gn/gn/script/_back_/: compiled_action.gni  json_schema_api.gni
gn/simplified_gn/gn/script/_back_/android/: BUILD.gn
gn/simplified_gn/gn/script/_back_/android/gyp/: javac.py  process_resources.py
gn/simplified_gn/gn/script/_back_/android/gyp/test/: BUILD.gn
gn/simplified_gn/gn/script/_back_/android/gyp/util/: build_utils.py
gn/simplified_gn/gn/script/_back_/android/incremental_install/: BUILD.gn
gn/simplified_gn/gn/script/_back_/android/pylib/device/commands/: BUILD.gn
gn/simplified_gn/gn/script/_back_/android/pylib/remote/device/dummy/: BUILD.gn
gn/simplified_gn/gn/script/_back_/android/rezip/: BUILD.gn
gn/simplified_gn/gn/script/_back_/linux/: BUILD.gn
gn/simplified_gn/gn/script/_back_/secondary/tools/grit/: BUILD.gn  grit_rule.gni
gn/simplified_gn/gn/script/_back_/win/: BUILD.gn
gn/simplified_gn/gn/script/pylib/util/: build_utils.py
gn/src/: BUILD.gn
gn/src/demo_android/: .gitignore  .project  AndroidManifest.xml  BUILD.gn  gradle.properties
gn/src/demo_android/app/: build.gradle  proguard-rules.pro
gn/src/demo_android/app/src/androidTest/java/com/erikge/gnandroid/: ApplicationTest.java
gn/src/demo_android/app/src/main/: AndroidManifest.xml
gn/src/demo_android/app/src/main/java/com/erikge/gnandroid/: MainActivity.java
gn/src/demo_android/app/src/main/res/layout/: activity_main.xml
gn/src/demo_android/app/src/main/res/values/: strings.xml
gn/src/demo_android/jni/: Android.mk  registered_interface.cpp
gn/src/demo_android/res/layout/: activity_main.xml
gn/src/demo_android/res/menu/: main.xml
gn/src/demo_android/res/values/: strings.xml
gn/src/demo_android/src/com/erikge/gnandroid/: MainActivity.java  NativeInterface.java
gn/src/demo_ios/: BUILD.gn
gn/src/demo_ios/gnIos/gnIos/: DetailViewController.m  Info.plist  MasterViewController.m
gn/src/demo_ios/gnIos/gnIos/Base.lproj/: LaunchScreen.xib
gn/src/demo_ios/gnIos/gnIosTests/: Info.plist  gnIosTests.m
gn/src/demo_java/: BUILD.gn
gn/src/demo_java/src/com/erik/gn/: Demo.java
gn/trace_standalone/demo_ios/: BUILD.gn
gn/trace_standalone/demo_ios/gnIos/gnIos/: AppDelegate.h  MasterViewController.h
gradle/: .gitignore
src/: .gn  main.c
(+24 files in other folders)
