import("//gn/addon/android_app/rules.gni")

android_apk("demo_android") {
    apk_name = "demo_android"
    android_manifest = "AndroidManifest.xml"
    asset_location = "assets"

    java_in_dir = [ "src" ]

    native_libs = [
        "libstyle_javah.so",
        "libstyle_register.so",
        "libstyle_3rd.so"
    ]

    deps = [
        ":style_javah",
        ":style_register",
        ":style_3rd",
        ":resources",
        ":v4",
    ]
}

shared_library("style_javah") {
  sources = [
    "jni/com_erikge_gnandroid_NativeInterface.cpp",
  ]
}

shared_library("style_register") {
  sources = [
    "jni/registered_interface.cpp",
    "jni/jni_util.cpp",
  ]

  libs = [ "log" ]
}

copy("style_3rd") {
    sources = [ "libs/armeabi/libstyle_3rd.so" ]
    outputs = [
      "$root_build_dir/{{source_file_part}}",
    ]
}

android_resources("resources") {
    resource_dirs = [ "res" ]
    custom_package = "com.erikge.gnandroid"
    android_manifest = "AndroidManifest.xml"
    v14_skip = true
}

android_prebuilt("v4") {
     jar_path = "libs/android-support-v4.jar"
     # jar_path 可以有多个
     # jar_path = "xxx.jar"
     # jar_path = "yyy.jar"
}

