import("//gn/addon/android_app/rules.gni")


java_library("demo_lib") {
  _find_java_ = exec_script("//gn/script/find.py",
    [
      "--pattern",
      "*.java",
      rebase_path("src/com/erik/library", root_build_dir),
    ],
    "list lines")
  java_files = rebase_path(_find_java_, ".", root_build_dir)

#  DEPRECATED_java_in_dir = "src/com/erik/library"
}

java_binary("demo_java") {
  deps = [
    ":demo_lib",
  ]
  java_files = [ "src/com/erik/gn/Demo.java" ]
  main_class = "com.erik.gn.Demo"
}

