import("//build/config/android/rules.gni")


android_resources("resources") {
    resource_dirs = [ "res" ]
    custom_package = "com.erikge.gnandroid"
    v14_skip = true
}

android_java_prebuilt("v4") {
     jar_path = "libs/android-support-v4.jar"
}

android_apk("demo_android") {
    apk_name = "demo_android"
    android_manifest = "AndroidManifest.xml"
    asset_location = "assets"

    DEPRECATED_java_in_dir = "src"
    #native_libs = [
        #"libcontent_shell_content_view.so"
    #]

    deps = [
        ":resources",
        ":v4",
    ]
}