import("//build/config/android/rules.gni")

android_apk("demo_android") {
    apk_name = "demo_android"
    android_manifest = "AndroidManifest.xml"
    asset_location = "assets"

    DEPRECATED_java_in_dir = "src"

    native_libs = [
        "libstyle_javah.so",
        "libstyle_register.so",
        #"libs/armeabi/libttest.so"
    ]

    deps = [
        ":style_javah",
        ":style_register",
        ":resources",
        ":v4",
    ]
}

shared_library("style_javah") {
  sources = [
    "jni/com_erikge_gnandroid_NativeInterface.cpp",
  ]
}

shared_library("style_register") {
  sources = [
    "jni/registered_interface.cpp",
    "jni/jni_util.cpp",
  ]

  libs = [ "log" ]
}

android_resources("resources") {
    resource_dirs = [ "res" ]
    custom_package = "com.erikge.gnandroid"
    v14_skip = true
}

android_java_prebuilt("v4") {
     jar_path = "libs/android-support-v4.jar"
     # jar_path 可以有多个
     # jar_path = "xxx.jar"
     # jar_path = "yyy.jar"
}

