import("//build/config/android/rules.gni")


java_library("demo_lib") {
#  java_files = [
#    exec_script( "//build/android/gyp/util/build_utils.py",
#      [
#        "FindInDirectories",
#        rebase_path("src/com/erik/library/", root_build_dir),
#        "*.java",
#      ]
#    )
#  ]

  DEPRECATED_java_in_dir = "src/com/erik/library"
}

java_binary("demo_java") {
  deps = [
    ":demo_lib",
  ]
  java_files = [ "src/com/erik/gn/Demo.java" ]
  main_class = "com.erik.gn.Demo"
}

